--- a/app/src/main/res/layout/ble_device_row.xml
+++ b/app/src/main/res/layout/ble_device_row.xml
@@ -7,6 +7,5 @@
     <TextView
         android:id="@+id/device_name_text_view"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="20sp"/>
+        android:layout_height="wrap_content" />
 </LinearLayout>
