--- a/app/src/main/res/layout/ble_device_row.xml
+++ b/app/src/main/res/layout/ble_device_row.xml
@@ -1,11 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal"
-    android:padding="10dp"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:orientation="horizontal"
+    android:padding="8dp">
+
     <TextView
-        android:id="@+id/device_name_text_view"
+        android:id="@+id/device_name_text"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:minHeight="16dp"
+        android:text="example text" />
+
+    <Space
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="1" />
+
+    <ProgressBar
+        android:id="@+id/connection_spinner"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:indeterminate="true"
+        android:maxWidth="24dp"
+        android:maxHeight="24dp"
+        android:minWidth="16dp"
+        android:minHeight="16dp"
+        android:visibility="invisible" />
+
+    <ImageView
+        android:id="@+id/status_icon"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:contentDescription="status"
+        android:maxWidth="24dp"
+        android:maxHeight="24dp"
+        android:minWidth="16dp"
+        android:minHeight="16dp"
+        app:srcCompat="@drawable/ic_plug_in" />
+
+
 </LinearLayout>
