--- a/app/src/main/res/layout/ble_device_row.xml
+++ b/app/src/main/res/layout/ble_device_row.xml
@@ -4,14 +4,16 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
-    android:padding="8dp">
+    android:padding="8dp"
+    android:paddingStart="16dp"
+    android:paddingEnd="16dp"
+    >
 
     <TextView
         android:id="@+id/device_name_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:minHeight="16dp"
-        android:text="example text" />
+        android:minHeight="16dp" />
 
     <Space
         android:layout_width="0dp"
@@ -34,7 +36,7 @@
         android:id="@+id/status_icon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:contentDescription="status"
+        android:contentDescription="@string/connection_status"
         android:maxWidth="24dp"
         android:maxHeight="24dp"
         android:minWidth="16dp"
