--- a/app/src/main/res/layout/ble_device_row.xml
+++ b/app/src/main/res/layout/ble_device_row.xml
@@ -6,36 +6,28 @@
     android:orientation="horizontal"
     android:padding="8dp"
     android:paddingStart="16dp"
-    android:paddingEnd="16dp"
-    >
-
-    <TextView
-        android:id="@+id/device_name_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:minHeight="16dp" />
-
-    <Space
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="1" />
+    android:paddingEnd="16dp">
 
     <ProgressBar
         android:id="@+id/connection_spinner"
         style="?android:attr/progressBarStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical"
+        android:layout_marginHorizontal="8dp"
         android:indeterminate="true"
         android:maxWidth="24dp"
         android:maxHeight="24dp"
         android:minWidth="16dp"
         android:minHeight="16dp"
-        android:visibility="invisible" />
+        android:visibility="gone" />
 
     <ImageView
         android:id="@+id/status_icon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical"
+        android:layout_marginHorizontal="8dp"
         android:contentDescription="@string/connection_status"
         android:maxWidth="24dp"
         android:maxHeight="24dp"
@@ -43,5 +35,26 @@
         android:minHeight="16dp"
         app:srcCompat="@drawable/ic_plug_in" />
 
+    <TextView
+        android:id="@+id/device_name_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="center_vertical"
+        android:minHeight="16dp"
+        android:padding="0dp"
+        android:text="Samsung kek" />
+
+    <Space
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical"
+        android:layout_weight="1" />
+
+    <Button
+        android:id="@+id/device_action_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:maxHeight="16dp"
+        android:text="@string/connect" />
 
 </LinearLayout>
