--- a/app/src/main/res/layout/activity_bluetooth_status.xml
+++ b/app/src/main/res/layout/activity_bluetooth_status.xml
@@ -44,6 +44,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
+        android:contentDescription="@string/paired_devices_list"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHeight_min="30dp"
         app:layout_constraintStart_toStartOf="parent"
@@ -54,31 +55,36 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="48dp"
+        android:layout_marginTop="16dp"
         android:text="@string/paired_devices"
         android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/scan_button" />
+
+    <Button
+        android:id="@+id/scan_button"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        android:onClick="onScanButtonClicked"
+        android:text="@string/scan"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/advertise_button" />
 
     <Button
-        android:id="@+id/scan_button"
-        android:layout_width="175dp"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="16dp"
-        android:onClick="onScanButtonClicked"
-        android:text="@string/scan"
-        app:layout_constraintBaseline_toBaselineOf="@+id/advertise_button"
-        app:layout_constraintEnd_toEndOf="parent" />
-
-    <Button
         android:id="@+id/advertise_button"
-        android:layout_width="175dp"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
         android:onClick="onAdvertiseButtonClicked"
         android:text="@string/advertise"
         app:flow_firstVerticalBias="0.0"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
